--- a/01-Load-R.Rmd
+++ b/01-Load-R.Rmd
@@ -1,3 +1,16 @@
 # โหลดโปรแกรม R
+R ได้รับการพัฒนาและดูแลโดยทีมนักพัฒนาทั้วโลก ซึ่งให้บริการที่เวปไซท์ [The Comprehensive R Archive Network](https://cran.r-project.org/) ที่ด้านบนของหน้าเว็บจะมีลิงก์สำหรับดาวน์โหลด R 3 ลิงก์ ตามระบบปฏิบัติการ: Windows, Mac หรือ Linux
 
-กำลังเขียน ....
+## โหลดและติดตั้ง R
+
+### โหลดและติดตั้ง R บน Windows
+
+หากต้องการติดตั้ง R บน Windows ให้คลิกลิงก์ [Download R for Windows](https://cran.r-project.org/) จากนั้นคลิกลิงก์ "base" ถัดไป คลิกลิงก์แรกที่ด้านบนของหน้าใหม่ ลิงก์นี้ควรเขียนประมาณว่า “ดาวน์โหลด R 4.1.0 for Windows” ยกเว้น แต่จะมีเวอร์ชันใหม่กว่า ลิงก์จะดาวน์โหลดโปรแกรมติดตั้งซึ่งติดตั้งเวอร์ชันล่าสุดของ R สำหรับ Windows เรียกใช้โปรแกรมนี้และทำตามขั้นตอนของ หน้าต่างติดตั้งที่ปรากฏขึ้น จะติดตั้ง R ลงในโฟลเดอร์ Program และ คุณอาจจะต้องมีสิทธิ์ administrator เพื่อติดตั้งโปรแกรมลงบนเครื่อง
+
+### โหลดและติดตั้ง R บน Mac
+
+
+### โหลดและติดตั้ง R บน Linux
+
+
+## โหลดและติดตั้ง Rstudio
