--- a/index.Rmd
+++ b/index.Rmd
@@ -13,10 +13,11 @@ link-citations: yes
 github-repo: jaisong-sith/R4TH
 ---
 
-# จุดประสงค์
+# R4TH คือ
 
-bookdown นี้ เขียนเพื่อให้เผยแพร่และให้ความรู้เกี่ยวกับการเขียนโปรแกรมอาร์ ตั้งแต่พื้นฐาน (Begining level) จนถึงระดับปานกลาง (Intermedient)
+ถ้าคุณกำลังอ่านเวปไซท์นี้ แสดงว่าตอนนนี้คุณอาจจะกำลังมองหาวิธีวิเคราะห์ข้อมูล
+สร้างกราฟ หรือ อาจจะสร้างแบบจำลอง ถ้าใช่ R ก็ใช่สำหรับคุณ R กลายเป็นภาษาทั่วโลกสำหรับการวิเคราะห์ทางสถิติ และ data visualization หรือ วิธีวิเคราะห์ที่ซับซ้อนเพื่อเข้าใจข้อมูลจากพื้นฐานที่สุดไปจนถึงที่ซับซ้อนที่สุด
 
-## วิธีการใช้
+## เหมาะสำหรับใคร
 
-กำลังเขียน ....
+สำหรับคนที่กำลังเรียนรู้ R ตั้งแต่พื้นฐาน (Begining level) จนถึงระดับปานกลาง (Intermedient)
