--- a/01-Load-R.Rmd
+++ b/01-Load-R.Rmd
@@ -5,7 +5,7 @@ R ได้รับการพัฒนาและดูแลโดยที
 
 ### โหลดและติดตั้ง R บน Windows
 
-หากต้องการติดตั้ง R บน Windows ให้คลิกลิงก์ [Download R for Windows](https://cran.r-project.org/) จากนั้นคลิกลิงก์ "base" ถัดไป คลิกลิงก์แรกที่ด้านบนของหน้าใหม่ ลิงก์นี้ควรเขียนประมาณว่า “ดาวน์โหลด R 4.1.0 for Windows” ยกเว้น แต่จะมีเวอร์ชันใหม่กว่า ลิงก์จะดาวน์โหลดโปรแกรมติดตั้งซึ่งติดตั้งเวอร์ชันล่าสุดของ R สำหรับ Windows เรียกใช้โปรแกรมนี้และทำตามขั้นตอนของ หน้าต่างติดตั้งที่ปรากฏขึ้น จะติดตั้ง R ลงในโฟลเดอร์ Program และ คุณอาจจะต้องมีสิทธิ์ administrator เพื่อติดตั้งโปรแกรมลงบนเครื่อง
+หากต้องการติดตั้ง R บน Windows ให้คลิกลิงก์ [Download R for Windows](https://cran.r-project.org/bin/windows/base/) จากนั้นคลิกลิงก์ "base" ถัดไป คลิกลิงก์แรกที่ด้านบนของหน้าใหม่ ลิงก์นี้ควรเขียนประมาณว่า “ดาวน์โหลด R 4.1.0 for Windows” ยกเว้น แต่จะมีเวอร์ชันใหม่กว่า ลิงก์จะดาวน์โหลดโปรแกรมติดตั้งซึ่งติดตั้งเวอร์ชันล่าสุดของ R สำหรับ Windows เรียกใช้โปรแกรมนี้และทำตามขั้นตอนของ หน้าต่างติดตั้งที่ปรากฏขึ้น จะติดตั้ง R ลงในโฟลเดอร์ Program และ คุณอาจจะต้องมีสิทธิ์ administrator เพื่อติดตั้งโปรแกรมลงบนเครื่อง
 
 ### โหลดและติดตั้ง R บน Mac
 
